codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---


  ◇ Approve this command?

  Reason: this is a test reason such as one that would be produced by the model

  $ echo hello world

› 1. Allow this command (y)               Runs this action once.
  2. Always allow `echo hello world` (p)  Saves an allow rule for matching commands.
  3. Tell Codex what to do instead (esc)    Stops this request and returns to Codex.

  enter select · esc stop & reply
