codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: contents
---


  ◇ Approve this command?

  $ python - <<'PY'
  print('hello')
  PY

› 1. Allow this command (y)             Runs this action once.
  2. Tell Codex what to do instead (esc)  Stops this request and returns to Codex.

  enter select · esc stop & reply
