codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(contents)
---


  ◇ Apply proposed changes?

  Description: The model wants to apply changes
  Destination: /tmp/project/README.md

› 1. Apply changes (y)
     Applies only these proposed changes.
  2. Allow these paths for this session (a)
     Allows changes to these paths for this session.
  3. Tell Codex what to do instead (esc)
     Keeps these proposed changes from being applied.

  enter select · esc stop & reply
